Trinity scss-mob-table

--- a/index.html
+++ b/index.html
@@ -219,10 +219,10 @@
                 </div>
         </section>
         <section class="main-progress sizeblock" id="aboutUs">
-            <h2 class="block-progress__title title-h2 anime">Наши достижения</h2>
+            <h2 class="block-progress__title title-h2">Наши достижения</h2>
             <div class="main-progress__wrapper">
                 <!-- часть с основным текстом и фотографией -->
-                <div class="main-progress__wrapper anime">
+                <div class="main-progress__wrapper">
                     <p class="main-progress__text text-p">
                         <a href="https://vk.com/diabet.fond" target="_blank"
                             class="main-progress__text-span">Благотворительный фонд борьбы с
